fixed spacing on tables

--- a/public/company_show.css
+++ b/public/company_show.css
@@ -24,6 +24,9 @@ h1 {
   border: 3px solid #0D47A1;
   border-radius: 2px;
   display: inline-block;
+  min-height:300px;
+  float: left;
+  margin-left: 10%;
 }
 
 .add_equipment form {
@@ -37,6 +40,9 @@ h1 {
   border: 3px solid #E65100;
   border-radius: 2px;
   display: inline-block;
+  min-height:300px;
+  float: left;
+  margin-left: 10%;
 }
 
 .add_employee form {
@@ -73,4 +79,23 @@ td, th {
 
 th {
   background-color: #C8E6C9;
+}
+
+#checked_out_tools {
+
+}
+
+#available_tools {
+
+}
+
+.tool_list {
+  margin-left: 9%;
+  width: 40%;
+  display: inline-block;
+}
+
+.center_row {
+  width: 100%;
+  display: block;
 }
